--- a/bk/templates/activities_upload.html
+++ b/bk/templates/activities_upload.html
@@ -16,7 +16,7 @@
                 <br>
                 <input type="submit" name="Upload">
                 </form>>
-            <a href = "{%url 'activities' %}">Back to Homepage</a>
+            <a href = "{%url 'activities' %}">Back</a>
         </div>
 
 
