--- a/bk/templates/songs_upload.html
+++ b/bk/templates/songs_upload.html
@@ -17,7 +17,7 @@
                 <br>
                 <input type="submit" name="Upload">
                 </form>>
-            <a href = "{%url 'index' %}">Back to Homepage</a>
+            <a href = "{%url 'songs' %}">Back</a>
         </div>
 
 
