--- a/bk/templates/memories.html
+++ b/bk/templates/memories.html
@@ -6,6 +6,14 @@
 
     <body>
         <div class="menu">
+            <h2>Our Most Treasured Memories</h2>
+            <ul>
+                {%autoescape off%}
+                {{memories}}
+                {%endautoescape%}
+            </ul>
+            <a href="{%url 'memories_upload'%}">New</a>
+            <br>
             <a href = "{%url 'index' %}">Back to Homepage</a>
         </div>
 
