--- a/bk/templates/pictures_upload.html
+++ b/bk/templates/pictures_upload.html
@@ -1,12 +1,22 @@
 <html>
     <head>
-        <link rel="stylesheet" href="bk.css">
+        <link rel="stylesheet" href="../bk.css">
     </head>
 
 
     <body>
         <div class="menu">
-            <a href = "{%url 'index' %}">Back to Homepage</a>
+            <form method="POST" action="{%url 'pictures' %}" enctype="multipart/form-data">
+                {% csrf_token %}
+                <input type="radio" id="baylee" name="who" value="baylee" checked=true>
+                <label for="baylee">Baylee</label><br>
+                <input type="radio" id="kyle" name="who" value="kyle">
+                <label for="kyle">Kyle</label><br>
+                <input type="file" name="picture">
+                <br>
+                <input type="submit" name="Upload">
+                </form>>
+            <a href = "{%url 'pictures' %}">Back</a>
         </div>
 
 
